2010-05-17 Daniel Krieg  <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier/src/MpiStream.cpp: fixed thread
    problem -> now requesting MPI_THREAD_MULTIPLE level. Regarding
    OpenMPI faq thread support not intensively tested; I would recommend
    MPICH2 as mpi implementation.
    Preventing Mpi now from busy polling via non-blocking communcation.

2010-05-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: deal with conflict in PolyDriver::open
	variants when translated to python.

2010-05-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/yarp_config_files.dox: update config file documentation
	to include [include category_name section_name "filename.ini"]
	syntax.

	* src/libYARP_OS/src/Property.cpp: allow usage of 
	[include category_name section_name "filename.ini"] in
	configuration files.  This acts as if the material in
	"filename.ini" was included in a section called
	[category_name section_name]

2010-05-13  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/FindACE.cmake: renamed from FindAce.cmake for 
	consistency.  Provides ACE_FOUND, ACE_LIBRARIES, ACE_INCLUDE_DIRS.

	* conf/FindOpenCV.cmake: freshen OpenCV search script.
	Provides OpenCV_FOUND, OpenCV_LIBRARIES, OpenCV_INCLUDE_DIRS.

2010-05-10  Ugo Pattacini <ugo.pattacini@iit.it>

	* src/libYARP_DEV/include/yarp/dev/GazeControl.h: added the interface
    for the control of the gaze.

2010-05-05  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/CMakeLists.txt and lots of others: big cmake clean-up.
	Report breakage please!  In case you need a working YARP in
	a hurry, use revision r7841 (svn update -r 7841)
	
2010-05-04  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpVersion.cmake: bump version up to 2.2.7, probably
	last release before a biggish CMake reorganization.

2010-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: fix "found"